solved compatibility issues with maven.